plugins {
	id 'org.springframework.boot' version '2.4.1'
	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
	id 'java'
}

group = 'org.gainratio'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '8'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	jaxb // Only for generation purpose
}

repositories {
	mavenCentral()
}

task genJaxb {
	ext.sourcesDir = "${buildDir}/generated-sources/jaxb"
	ext.classesDir = "${buildDir}/classes/jaxb"
	outputs.dir classesDir

	doLast() {
		project.ant {
			// Create output directories
			mkdir(dir: sourcesDir)
			mkdir(dir: classesDir)

			taskdef name: 'xjc', classname: 'com.sun.tools.xjc.XJCTask', classpath: configurations.jaxb.asPath

			xjc(destdir: sourcesDir, binding: "${projectDir}/src/main/resources/binding.xml") {
				schema(dir: "${projectDir}/src/main/resources", includes: '**/*.xsd')
				arg(value: "-extension")
				produces(dir: sourcesDir, includes: '**/*.java')
			}

			javac(destdir: classesDir, source: 1.8, target: 1.8, debug: true,
					debugLevel: 'lines,vars,source',
					includeantruntime: false,
					classpath: configurations.jaxb.asPath) {
				src(path: sourcesDir)
				include(name: '**/*.java')
				include(name: '*.java')
			}

			copy(todir: classesDir) {
				fileset(dir: sourcesDir, erroronmissingdir: false) {
					exclude(name: '**/*.java')
				}
			}
		}
	}
}


dependencies {
	compile(files(genJaxb.classesDir).builtBy(genJaxb))
	jaxb 'com.sun.xml.bind:jaxb-xjc:2.1.7'
	jaxb "com.migesok:jaxb-java-time-adapters:1.1.3"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api
	compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
	compile('javax.activation:activation:1.1')
	compile('org.glassfish.jaxb:jaxb-runtime:2.3.1')

	// https://mvnrepository.com/artifact/commons-io/commons-io
	compile group: 'commons-io', name: 'commons-io', version: '2.6'
	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
	// https://mvnrepository.com/artifact/commons-collections/commons-collections
	compile group: 'commons-collections', name: 'commons-collections', version: '3.2.2'
	// https://mvnrepository.com/artifact/commons-codec/commons-codec
	compile group: 'commons-codec', name: 'commons-codec', version: '1.15'
	compile 'org.springdoc:springdoc-openapi-ui:1.5.2'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

compileJava.dependsOn 'genJaxb'

jar {
	from genJaxb.classesDir
}

test {
	useJUnitPlatform()
}

